# Kalman

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  install_linux.sh
EKF/: CMakeLists.txt
EKF/include/: FusionEKF.h  KalmanFilter.h  Tools.h
EKF/src/: FusionEKF.cpp  KalmanFilter.cpp  Tools.cpp  main.cpp
KF/: CMakeLists.txt
KF/include/: KalmanFilter.h  LidarTracker.h  Measurement.h
KF/src/: KalmanFilter.cpp  LidarTracker.cpp  main.cpp
apps/: CMakeLists.txt  main.cpp
cmake/: AddCompilerFlags.cmake  AddLibraries.cmake
configs/: config.json
data/: test_data_1.json  test_data_2.json
docs/: sensor_fusion.md
documentation/: documentation.html  documentation.md
fuser/: CMakeLists.txt  fuser.cpp  fuser.hpp
fuser/fuser_config/: CMakeLists.txt  fuser_config.cpp  fuser_config.hpp  fuser_config_test.cpp
fuser/kalman_filter/: CMakeLists.txt  kalman_filter.cpp  kalman_filter.hpp  kalman_filter_test.cpp
fuser/measurement/: CMakeLists.txt  measurement.cpp  measurement.hpp  measurement_test.cpp
fuser/object/: CMakeLists.txt  object.cpp  object.hpp  object_test.cpp
scripts/: fake_data_generator.py
